--- a/package.json
+++ b/package.json
@@ -10,23 +10,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@ant-design/nextjs-registry": "^1.0.1",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
-    "antd": "^5.21.0",
     "framer-motion": "^11.5.6",
     "next": "14.2.13",
     "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.79.3",
-    "supertokens-auth-react": "^0.47.1",
-    "supertokens-node": "^20.1.2",
-    "supertokens-web-js": "^0.13.0"
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@types/node": "^20",
