--- a/package.json
+++ b/package.json
@@ -10,20 +10,34 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@auth/mongodb-adapter": "^3.5.3",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@vercel/blob": "^0.24.0",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.6",
+    "jose": "^5.9.3",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "14.2.13",
     "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.79.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
