--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@emotion/styled": "^11.13.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.24.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.6",
+    "ioredis": "^5.4.1",
     "jose": "^5.9.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
@@ -32,7 +34,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "sass": "^1.79.3"
+    "sass": "^1.79.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
