--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@auth/mongodb-adapter": "^3.5.3",
+    "@auth/mongodb-adapter": "^3.7.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.24.0",
+    "add": "^2.0.6",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -29,13 +30,15 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
+    "next-auth": "^5.0.0-beta.22",
     "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.79.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
