--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "react-super-responsive-table": "^6.0.0",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.79.3",
     "uuid": "^10.0.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
