--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@auth/mongodb-adapter": "^3.7.0",
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/react": "^2.8.2",
+    "@clerk/nextjs": "^6.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
