--- a/package.json
+++ b/package.json
@@ -10,26 +10,20 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@auth/mongodb-adapter": "^3.7.0",
     "@clerk/nextjs": "^6.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.24.0",
     "add": "^2.0.6",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.6",
-    "ioredis": "^5.4.1",
-    "jose": "^5.9.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
-    "next-auth": "^5.0.0-beta.22",
     "nextjs-cors": "^2.2.0",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
@@ -42,9 +36,6 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
