--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@prisma/client": "^5.22.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.24.0",
@@ -25,12 +26,15 @@
     "nextjs-cors": "^2.2.0",
     "prisma": "^5.22.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-super-responsive-table": "^6.0.0",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.79.3",
+    "swapy": "^0.4.2",
     "uuid": "^10.0.0",
     "yarn": "^1.22.22"
   },
@@ -38,6 +42,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.13",
     "eslint": "^8",
