--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@clerk/nextjs": "^6.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@liveblocks/client": "^2.11.0",
+    "@liveblocks/node": "^2.11.0",
+    "@liveblocks/react": "^2.11.0",
+    "@liveblocks/react-ui": "^2.11.0",
     "@prisma/client": "^5.22.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/uuid": "^10.0.0",
@@ -23,18 +27,17 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
+    "next-nprogress-bar": "^2.3.15",
     "nextjs-cors": "^2.2.0",
     "prisma": "^5.22.0",
     "react": "^18",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-error-boundary": "^4.1.2",
     "react-redux": "^9.1.2",
     "react-super-responsive-table": "^6.0.0",
-    "react-swipeable": "^7.0.2",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.79.3",
-    "swapy": "^0.4.2",
     "uuid": "^10.0.0",
     "yarn": "^1.22.22"
   },
@@ -42,13 +45,13 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.13",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
