--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@clerk/clerk-react": "^5.15.3",
     "@clerk/nextjs": "^6.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
