--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@liveblocks/react-ui": "^2.11.0",
     "@prisma/client": "^5.22.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.24.0",
     "add": "^2.0.6",
